# Ranges

./: README.md
lib/: CMakeLists.txt  processing.h
lib/aggregate_by_key/: CMakeLists.txt  aggregate_by_key.h
lib/as_data_flow/: CMakeLists.txt  as_data_flow.h
lib/as_vector/: CMakeLists.txt  as_vector.h
lib/dir/: CMakeLists.txt  dir.h
lib/drop_nullopt/: CMakeLists.txt  drop_nullopt.h
lib/filter/: CMakeLists.txt  filter.h
lib/join/: CMakeLists.txt  join.h
lib/open_files/: CMakeLists.txt  open_files.h
lib/split/: CMakeLists.txt  split.h
lib/split_expected/: CMakeLists.txt  split_expected.h
lib/transform/: CMakeLists.txt  transform.h
lib/write/: CMakeLists.txt  write.h
tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  dir_ut.cpp  drop_nullopt_ut.cpp  filter_ut.cpp  flow_convertions_ut.cpp  join_ut.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
tests/fold_for_tests/: file1.txt
tests/fold_for_tests/some_fold/: file_in_some_fold.txt
tests/fold_for_tests/some_fold/fold_in_some_fols/: file_in_in_some_fold.txt
